--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Go</title>
     <script src="index.js" defer></script>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
 <svg id="goboard" viewBox="0 0 18 18" style="width:100%; max-width:500px; background:#DEB887;"></svg>
