--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Go</title>
     <script src="login.js" defer></script>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <div class="container">
