adjusted a few of the comments and frontend

--- a/Frontend/lobby.html
+++ b/Frontend/lobby.html
@@ -9,9 +9,13 @@
 </head>
 <body>
     <h1>Lobby</h1>
+    <div id="status-bar">
+        <span id="logged-in-as"></span>
+        <button id="logout-btn">Logout</button>
+    </div>"
     <ul id="game-list">
         <li>Loading games...</li>
-        </ul>
-        <button id="create-game-btn">Create New Game</button>
+    </ul>
+    <button id="create-game-btn">Create New Game</button>
 </body>
 </html>
